#tf-data-service Improve snapshot progressing reporting by not counting.
For sample_from_datasets and enumerate, the random dataset and the
index split provider are infinite, which results in infinite loops
when calling SnapshotManager::CountSplits.

The fix is to implement a `Cardinality` method for split providers
and use it to report snapshot progress.

PiperOrigin-RevId: 589955166

--- a/tensorflow/core/kernels/data/BUILD
+++ b/tensorflow/core/kernels/data/BUILD
@@ -996,6 +996,7 @@ tf_kernel_library(
         "//tensorflow/core/data:name_utils",
         "//tensorflow/core/data:split_utils",
         "@com_google_absl//absl/memory",
+        "@local_tsl//tsl/platform:types",
     ],
 )
 
