#tf-data-service Returns right split cardinality for repeated datasets.
To handle repeated datasets, the repeat op needs to update the input
cardinality based on the times the input dataset is repeated.

PiperOrigin-RevId: 590273165

--- a/tensorflow/core/kernels/data/BUILD
+++ b/tensorflow/core/kernels/data/BUILD
@@ -1065,6 +1065,8 @@ tf_kernel_library(
         "//tensorflow/core:lib",
         "//tensorflow/core:lib_internal",
         "//tensorflow/core/data:name_utils",
+        "@com_google_absl//absl/status",
+        "@local_tsl//tsl/platform:errors",
     ],
 )
 
