#tf-data-service Fix a deadlock when loading a distributed snapshot dataset.
The original `FirstComeFirstServedTaskRunner::GetProcessingTimeNsec`
acquires a mutex lock that guards `iterator_`. In load v2,
`iterator_->GetNext` may be blocked when waiting for the snapshot to
complete. However, the dispatcher won't be able to know the snapshot
is complete without worker heartbeats, which calls `GetProcessingTimeNsec`.
This results in a deadlock.

Fix: The FirstComeFirstServedTaskRunner can expose the Model object,
which has its own locks. Calling `model->ComputeSnapshotProcessingTimeNsec`
does not block the iterator lock.

An additional benefit of this fix is that the next time we need something
from Model, we don't need to repeat all the delegations.

PiperOrigin-RevId: 590290283

--- a/tensorflow/core/data/BUILD
+++ b/tensorflow/core/data/BUILD
@@ -514,14 +514,15 @@ cc_library(
     deps = [
         ":dataset_utils",
         ":root_dataset",
+        ":serialization_utils",
         ":unbounded_thread_pool",
         "//tensorflow/core:all_kernels",
         "//tensorflow/core:core_cpu_internal",
         "//tensorflow/core:framework",
+        "//tensorflow/core:framework_internal",
         "//tensorflow/core:lib",
         "//tensorflow/core:protos_all_cc",
         "//tensorflow/core:session_options",
-        "//tensorflow/core/data:serialization_utils",
         "//tensorflow/core/framework:graph_proto_cc",
         "@com_google_absl//absl/memory",
         "@local_tsl//tsl/platform:env",
