--- a/tensorflow/python/checkpoint/BUILD
+++ b/tensorflow/python/checkpoint/BUILD
@@ -103,6 +103,7 @@ py_strict_library(
         "//tensorflow/python/util:tf_contextlib",
         "//tensorflow/python/util:tf_export",
         "//tensorflow/python/util:tf_inspect",
+        "@absl_py//absl/logging",
     ],
 )
 
@@ -391,6 +392,7 @@ py_strict_library(
     srcs = ["checkpoint_options.py"],
     srcs_version = "PY3",
     deps = [
+        "//tensorflow/python/checkpoint/sharding:sharding_util",
         "//tensorflow/python/util:deprecation",
         "//tensorflow/python/util:tf_export",
     ],
@@ -403,10 +405,12 @@ py_strict_library(
     deps = [
         ":checkpoint_options",
         "//tensorflow/core:protos_all_py",
+        "//tensorflow/python/checkpoint/sharding:sharding_policies",
         "//tensorflow/python/checkpoint/sharding:sharding_util",
         "//tensorflow/python/eager:context",
         "//tensorflow/python/eager:def_function",
         "//tensorflow/python/framework:constant_op",
+        "//tensorflow/python/framework:device",
         "//tensorflow/python/framework:dtypes",
         "//tensorflow/python/framework:ops",
         "//tensorflow/python/framework:tensor",
