#tf-data-service Do not busy wait while snapshot is being written.
Use an exponential backoff to control retrying frequencies, similar to
`tensorflow::data::grpc_util::Retry`.

PiperOrigin-RevId: 590711835

--- a/tensorflow/core/data/service/snapshot/BUILD
+++ b/tensorflow/core/data/service/snapshot/BUILD
@@ -281,6 +281,7 @@ cc_library(
         "@com_google_absl//absl/strings",
         "@com_google_absl//absl/strings:string_view",
         "@com_google_absl//absl/synchronization",
+        "@local_tsl//tsl/distributed_runtime/rpc:grpc_util",
         "@local_tsl//tsl/platform:env",
         "@local_tsl//tsl/platform:errors",
         "@local_tsl//tsl/platform:path",
