Exclude a flaky test from test coverage runs.
PiperOrigin-RevId: 592603323

--- a/tensorflow/python/distribute/BUILD
+++ b/tensorflow/python/distribute/BUILD
@@ -2410,6 +2410,7 @@ distribute_py_strict_test(
         "no_cuda_asan",  # times out
         "no_oss",  # TODO(b/283016506)
         "notsan",  # TODO(b/160006974)
+        "nozapfhahn",  # TODO(b/317228015)
     ],
     xla_enable_strict_auto_jit = True,
     deps = [
